# neo-net

./: CMakeLists.txt  README.md  include.h  main.cpp
cmake_modules/: FindSDL2TTF.cmake
cpp/: display.cpp  net.cpp  neuron.cpp  render.cpp
header/: display.h  net.h  neuron.h  render.h
